--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/variables';
+
+*, *::before, *::after {
+    font: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: $ff-nunito;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
+
+ul, ol {
+    list-style: none;
+}
