Added global transition. Added search bar component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,7 @@
         </svg>
     </app-button>
 </div>
+
+<div class="box">
+    <app-search-bar [isDarkMode]="isDark"></app-search-bar>
+</div>
