--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,12 @@ img {
 ul, ol {
     list-style: none;
 }
+
+
+.dark-mode {
+    transition: color .35s, background-color .35s, fill .35s;
+
+    & * {
+        transition: color .35s, background-color .35s, fill .35s;
+    }
+}
