Added country card component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,7 @@
 <div class="box">
     <app-search-bar [isDarkMode]="isDark"></app-search-bar>
 </div>
+
+<div class="box">
+    <app-country-card [country]="germany$|async" [isDarkMode]="isDark"></app-country-card>
+</div>
