--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,16 @@
-<div class="box" [class.dark-mode]="isDark">
+<header [class.dark-mode]="isDark">
+    <div class="header-wrapper">
+        <h1 class="header-title">Where in the world?</h1>
+        <app-toggle (toggled)="isDark = $event"></app-toggle>
+    </div>
+</header>
+
+<!-- <div class="box" [class.dark-mode]="isDark">
     <app-toggle (toggled)="isDark = $event"></app-toggle>
+</div>
+
+<div class="box">
+    <app-select [options]="options" [isDarkMode]="isDark" (onOptionSelect)="onOptionSelect($event)"></app-select>
 </div>
 
 <div class="box">
@@ -21,4 +32,5 @@
 
 <div class="box">
     <app-country-card [country]="germany$|async" [isDarkMode]="isDark"></app-country-card>
-</div>
+</div> -->
+
