--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,40 @@
+@import './../assets/variables';
+
+header {
+    box-shadow: 0 0 10px 1px rgba($color: #000000, $alpha: 0.15);
+}
+
+.header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5em 1em;
+}
+
+.header-title {
+    font-size: .95em;
+    font-weight: 700;
+    color: $very-dark-blue;
+}
+
+header.dark-mode {
+    background-color: $dark-blue;
+
+    .header-title {
+        color: $white;
+    }
+}
+
+@media screen and (min-width: 50em) {
+    .header-wrapper {
+        padding: 2em;
+    }
+
+    .header-title {
+        font-size: 1.25em;
+    }
+}
+
 .box {
     background-color: #fff;
     transition: background-color .35s;
