--- a/src/app/components/select/select.component.scss
+++ b/src/app/components/select/select.component.scss
@@ -3,12 +3,22 @@
 .form-field {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    position: relative;
 
     &.dark-mode {
         select {
             color: $white;
             background-color: $dark-blue;
         }
+    }
+
+    .custom-arrow {
+        position: absolute;
+        width: 1em;
+        height: 1em;
+        right: .75em;
+        pointer-events: none;
     }
 }
 
@@ -19,24 +29,13 @@ label {
 
 select {
     padding: .75em;
+    padding-right: 3.75em;
     border-radius: 5px;
     border: 0;
     outline: none;
     box-shadow: 0 0 5px 1px rgba($color: #000000, $alpha: 0.2);
-    position: relative;
     font-size: .95rem;
     cursor: pointer;
     color: $very-dark-blue;
-}
-
-// Remove arrow
-select {
     appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -webkit-appearance: none;
-}
-
-select::-ms-expand {
-    display: none;
 }
