--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -6,7 +6,7 @@ $fw-700: 700;
 // ### Neutral
 
 $dark-blue: hsl(209, 23%, 22%); //(Dark Mode Elements)
-$very-dark-blue: hsl(207, 26%, 17%); // (Dark Mode Background)
+$very-dark-blue-bg: hsl(207, 26%, 17%); // (Dark Mode Background)
 $very-dark-blue: hsl(200, 15%, 8%); // (Light Mode Text)
 $dark-gray: hsl(0, 0%, 52%); // (Light Mode Input)
 $very-light-gray: hsl(0, 0%, 98%); // (Light Mode Background)
