--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,11 @@
 @import './../../../assets/variables';
 
+:host {
+    height: 100%;
+}
+
 .home-section {
+    height: 100%;
     &.dark-mode {
         background-color: $very-dark-blue-bg;
     }
