--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,20 +20,56 @@ header {
 .header-title {
     font-size: .95em;
     font-weight: 700;
-    color: $very-dark-blue;
+
+    a {
+        font: inherit;
+        text-decoration: none;
+        color: $very-dark-blue;
+    }
 }
 
 header.dark-mode {
     background-color: $dark-blue;
 
     .header-title {
-        color: $white;
+        a {
+            color: $white;
+        }
     }
 }
 
 main {
-    height: 100%;
     flex-grow: 1;
+    
+    &.dark-mode {
+        background-color: $very-dark-blue-bg;
+    }
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: transparent;
+    .attribution {
+        padding: .75em;
+        display: flex;
+        align-items: center;
+        gap: 1.5em;
+
+        a {
+            color: $very-dark-blue;
+            font-size: .85em;
+        }
+    }
+
+    &.dark-mode {
+        .attribution {
+            a {
+                color: $white;
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 50em) {
