--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -6,6 +6,7 @@
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 5px 1px rgb(0 0 0 / 20%);
+    background-color: $white;
     cursor: pointer;
 
     &.dark-mode {
